--- a/_docs/site-network/RC01.md
+++ b/_docs/site-network/RC01.md
@@ -21,17 +21,17 @@ permalink: /docs/RC01/
 
 
 
-![RC01](/assets/Site/RC01/RC01.JPG)
+![RC01](/assets/sites/RC01/RC01.jpg)
 Site RC01 - Study site location: 
 
 
-![Site RC01 - the study site](/assets/Site/RC01/RC01site.JPG)
+![Site RC01 - the study site](/assets/sites/RC01/RC01site.jpg)
 Site RC01 - the study site.  (March 2023) (John Forrest)
 
 
-![RC01 View upstream](/assets/Site/RC01/RC01upstream.JPG)
+![RC01 View upstream](/assets/sites/RC01/RC01upstream.jpg)
 Site RC01 - View upstream.  (March 2023) (John Forrest)
 
 
-![RC01 View downstream](/assets/Site/RC01/RC01downstream.JPG)
+![RC01 View downstream](/assets/sites/RC01/RC01downstream.jpg)
 Site RC01 - View downstream.  (March 2023) (John Forrest)
