--- a/_docs/site-network/RC01.md
+++ b/_docs/site-network/RC01.md
@@ -1,5 +1,5 @@
 ---
-title: RC01 - ???
+title: RC01 - study site
 permalink: /docs/RC01/
 ---
 
@@ -17,7 +17,7 @@ permalink: /docs/RC01/
 
 
 
-![RC01](/assets/sites/RC01/RC01.jpg)
+![RC01](/assets/sites/RC01.jpg)
 Site RC01 - Study site location: 
 
 
