--- a/_docs/site-network/RC01.md
+++ b/_docs/site-network/RC01.md
@@ -5,10 +5,33 @@ permalink: /docs/RC01/
 
 
 ![RC01](/assets/sites/RC01.jpg)
-Site RC01 - Study site location: 
+Site RC01 - Study site location: below Puente Allccomachay
 
 ### Water Quality data
 
+|     Site / Sitio: RC01                                 |     March / marzo 2023                          |
+|--------------------------------------------------------|-------------------------------------------------|
+|     Season / Temporada:                                |     Austral Summer / Verano                     |
+|     Date / Fecha:                                      |     14.3.23                                     |
+|     Time / Hora:                                       |     8.15                                        |
+|     Width / Ancho (m)                                  |     42.70                                       |
+|     Depth / Profundidad (Av.) (m)                      |     1.10                                        |
+|     CSA / Area traversal (Av.) (m²)                    |     46.97                                       |
+|     Velocity / Velocidad  (Av.) (m/s)                  |     0.75                                        |
+|     Discharge / Caudal (Av.) (m³/s)                    |     35.228                                      |
+|     Riverbed sediment / Sedimentos                     |     Mainly boulders / Principalmente   rocas    |
+|     Temperature (Atmospheric) (°C)                     |     18.00                                       |
+|     Temperature (Water / Agua) (°C)                    |     15.52                                       |
+|     Atmospheric pressure / presión (mbar)              |     820.6                                       |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)       |                                                 |
+|     Dissolved oxygen / Oxigeno disuelto (%)            |                                                 |
+|     pH                                                 |     8.33                                        |
+|     Conductivity / Conductividad (µS/cm)               |     250                                         |
+|     Total Dissolved Solids (TDS / STD)  (ppm)          |     125                                         |
+|     ORP (mV)                                           |     233.8                                       |
+|     Turbidity / Turbidez                               |     Turbid: light brown / marron ligero         |
+|     Alkalinity/Alkalinidad (Titración) (mg/l CaCO₃)    |     91 (1.6N)                                   |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)        |     74                                          |
 
 
 ### Data Analysis
