--- a/_docs/site-network/Q1_1.md
+++ b/_docs/site-network/Q1_1.md
@@ -18,7 +18,7 @@ The study site / El lugar del estudio (March 2023) (John Forrest)
 View downstream from the study site / Visita rio abajo del lugar del estudio (March 2023) (John Forrest)
 
 
-![Q1.1upstream](/assets/sites/Q1.1site.jpg)
+![Q1.1upstream](/assets/sites/Q1.1upstream.jpg)
 View upstream from the study site / Vista rio arriba desde el lugar del estudio (March 2023) (John Forrest)
 
 
