--- a/_docs/site-network/Q1_3.md
+++ b/_docs/site-network/Q1_3.md
@@ -1,4 +1,28 @@
 ---
-title: Q1.3 - ???
-permalink: /docs/Q1_3/
+title: Q1.3 - Upper Opanccay
+permalink: /docs/Q1_1/
 ---
+
+
+### Site Q1.3: Upper Opanccay
+
+![Q1.3](/assets/sites/Q1.3.jpg)
+Aerial view of study site / Vista aérea del lugar del estudio (March 2023) (John Forrest)
+
+
+![Q1.3site](/assets/sites/Q1.3site.jpg)
+The study site / El lugar del estudio (March 2023) (John Forrest)
+
+
+![Q1.3downstream](/assets/sites/Q1.3downstream.jpg)
+View downstream from the study site / Visita rio abajo del lugar del estudio (March 2023) (John Forrest)
+
+
+![Q1.3upstream](/assets/sites/Q1.3upstream.jpg)
+View upstream from the study site / Vista rio arriba desde el lugar del estudio (March 2023) (John Forrest)
+
+
+### Site description
+
+### Data analysis
+
