--- a/_docs/site-network/Q1_2.md
+++ b/_docs/site-network/Q1_2.md
@@ -1,10 +1,10 @@
 ---
-title: Q1.2 - Opanccay
+title: Q1.2 - Opanccay - Catarata Sirenachayoc
 permalink: /docs/Q1_2/
 ---
 
 
-### Site Q1.2: Opanccay
+### Site Q1.2: Opanccay - Catarata Sirenachayoc
 
 ![Q1.2](/assets/sites/Q1.2.jpg)
 Aerial view of study site / Vista aérea del lugar del estudio (March 2023) (John Forrest)
