--- a/_docs/site-network/Q2_2.md
+++ b/_docs/site-network/Q2_2.md
@@ -14,7 +14,7 @@ Aerial view of study site / Vista aérea del lugar del estudio (March 2023) (Joh
 The study site / El lugar del estudio (March 2023) (John Forrest)
 
 
-![Q2.2downstream](/assets/sites/Q2.2downstream.jpg)
+![Q2.2downstream](/assets/sites/Q2.2downstream2.jpg)
 View downstream from the study site / Visita rio abajo del lugar del estudio (March 2023) (John Forrest)
 
 
