--- a/_docs/site-network/Q2_3.md
+++ b/_docs/site-network/Q2_3.md
@@ -1,4 +1,27 @@
 ---
-title: Q2.3 - ???
-permalink: /docs/Q2_3/
+title: Q2.3 - Lower Rasuhuillca
+permalink: /docs/Q1_1/
 ---
+
+
+### Site Q2.3 - Lower Rasuhuillca
+
+![Q2.3](/assets/sites/Q2.3.jpg)
+Aerial view of study site / Vista aérea del lugar del estudio (March 2023) (John Forrest)
+
+
+![Q2.3site](/assets/sites/Q2.3site.jpg)
+The study site / El lugar del estudio (March 2023) (John Forrest)
+
+
+![Q2.3downstream](/assets/sites/Q2.3downstream.jpg)
+View downstream from the study site / Visita rio abajo del lugar del estudio (March 2023) (John Forrest)
+
+
+![Q2.3upstream](/assets/sites/Q2.3upstream.jpg)
+View upstream from the study site / Vista rio arriba desde el lugar del estudio (March 2023) (John Forrest)
+
+
+### Site description
+
+### Data analysis
