--- a/_docs/site-network/Q3_1.md
+++ b/_docs/site-network/Q3_1.md
@@ -1,4 +1,27 @@
 ---
-title: Q3.1 - ???
+title: Q3.1 - Lower Huamanguilla-Iguian
 permalink: /docs/Q3_1/
 ---
+
+
+### Site Q3.1 - Lower Huamanguilla-Iguian
+
+![Q3.1](/assets/sites/Q3.1.jpg)
+Aerial view of study site / Vista aérea del lugar del estudio (March 2023) (John Forrest)
+
+
+![Q3.1site](/assets/sites/Q3.1site.jpg)
+The study site / El lugar del estudio (March 2023) (John Forrest)
+
+
+![Q3.1downstream](/assets/sites/Q3.1downstream.jpg)
+View downstream from the study site / Visita rio abajo del lugar del estudio (March 2023) (John Forrest)
+
+
+![Q3.1upstream](/assets/sites/Q3.1upstream.jpg)
+View upstream from the study site / Vista rio arriba desde el lugar del estudio (March 2023) (John Forrest)
+
+
+### Site description
+
+### Data analysis
