--- a/_docs/site-network/Q1_1.md
+++ b/_docs/site-network/Q1_1.md
@@ -1,10 +1,10 @@
 ---
-title: Q1.1 - Boca Opanccay
+title: Q1.1 - Lower Opanccay: Boca Opanccay
 permalink: /docs/Q1_1/
 ---
 
 
-### Site Q1.1: Boca Opanccay
+### Site Q1.1: Lower Opanccay - Boca Opanccay
 
 ![Q1.1](/assets/sites/Q1.1.jpg)
 Aerial view of study site / Vista aérea del lugar del estudio (March 2023) (John Forrest)
