--- a/_docs/site-network/Q2_1.md
+++ b/_docs/site-network/Q2_1.md
@@ -1,10 +1,10 @@
 ---
-title: Q2.1 - Lower Huanta
+title: Q2.1 - Lower Huanta: Boca Huanta
 permalink: /docs/Q2_1/
 ---
 
 
-### Site Q2.1: Lower Huanta
+### Site Q2.1: Lower Huanta - Boca Huanta
 
 ![Q2.1](/assets/sites/Q2.1.jpg)
 Aerial view of study site / Vista aérea del lugar del estudio (March 2023) (John Forrest)
