--- a/_docs/site-network/Q2_2.md
+++ b/_docs/site-network/Q2_2.md
@@ -1,10 +1,10 @@
 ---
-title: Q2.2 - Catarata Occachaca
+title: Q2.2 - Middle Huanta: Catarata Occachaca
 permalink: /docs/Q2_2/
 ---
 
 
-### Site Q2.2: Catarata Occachaca
+### Site Q2.2: Middle Huanta - Catarata Occachaca
 
 ![Q2.2](/assets/sites/Q2.2.jpg)
 Aerial view of study site / Vista aérea del lugar del estudio (March 2023) (John Forrest)
