--- a/_docs/site-network/Q2_2.md
+++ b/_docs/site-network/Q2_2.md
@@ -1,5 +1,5 @@
 ---
-title: Q2.2 - Middle Huanta: Catarata Occachaca
+title: Q2.2 - Middle Huanta - Catarata Occachaca
 permalink: /docs/Q2_2/
 ---
 
