--- a/_docs/site-network/Q3_2.md
+++ b/_docs/site-network/Q3_2.md
@@ -1,4 +1,27 @@
 ---
-title: Q3.2 - ???
-permalink: /docs/Q3_2/
+title: Q3.2 - Middle Huamanguilla-Iguian - Puente Ayahuarcuna
+permalink: /docs/Q3_1/
 ---
+
+
+### Site Q3.2 - Middle Huamanguilla-Iguian - Puente Ayahuarcuna
+
+![Q3.2](/assets/sites/Q3.2.jpg)
+Aerial view of study site / Vista aérea del lugar del estudio (March 2023) (John Forrest)
+
+
+![Q3.2site](/assets/sites/Q3.2site.jpg)
+The study site / El lugar del estudio (March 2023) (John Forrest)
+
+
+![Q3.2downstream](/assets/sites/Q3.2downstream.jpg)
+View downstream from the study site / Visita rio abajo del lugar del estudio (March 2023) (John Forrest)
+
+
+![Q3.2upstream](/assets/sites/Q3.2upstream.jpg)
+View upstream from the study site / Vista rio arriba desde el lugar del estudio (March 2023) (John Forrest)
+
+
+### Site description
+
+### Data analysis
