--- a/_docs/site-network/Q3_3.md
+++ b/_docs/site-network/Q3_3.md
@@ -1,4 +1,27 @@
 ---
-title: Q3.3 - ???
-permalink: /docs/Q3_3/
+title: Q3.3 - Upper Huamanguilla-Iguian - Yanacocha
+permalink: /docs/Q3_1/
 ---
+
+
+### Site Q3.3 - Middle Huamanguilla-Iguian - Yanacocha
+
+![Q3.3](/assets/sites/Q3.3.jpg)
+Aerial view of study site / Vista aérea del lugar del estudio (March 2023) (John Forrest)
+
+
+![Q3.3site](/assets/sites/Q3.3site.jpg)
+The study site / El lugar del estudio (March 2023) (John Forrest)
+
+
+![Q3.3downstream](/assets/sites/Q3.3downstream.jpg)
+View downstream from the study site / Visita rio abajo del lugar del estudio (March 2023) (John Forrest)
+
+
+![Q3.3upstream](/assets/sites/Q3.3upstream.jpg)
+View upstream from the study site / Vista rio arriba desde el lugar del estudio (March 2023) (John Forrest)
+
+
+### Site description
+
+### Data analysis
