--- a/_docs/site-network/Q3_3.md
+++ b/_docs/site-network/Q3_3.md
@@ -11,6 +11,10 @@ Aerial view of study site / Vista aérea del lugar del estudio (March 2023) (Joh
 
 
 ![Q3.3site](/assets/sites/Q3.3site.jpg)
+Close up aerial view of study site / Vista aérea mas cerca del lugar del estudio (March 2023) (John Forrest)
+
+
+![Q3.3site](/assets/sites/Q3.3site2.jpg)
 The study site / El lugar del estudio (March 2023) (John Forrest)
 
 
