--- a/_docs/site-network/Q3_3.md
+++ b/_docs/site-network/Q3_3.md
@@ -18,12 +18,12 @@ Close up aerial view of study site / Vista aérea mas cerca del lugar del estudi
 The study site / El lugar del estudio (March 2023) (John Forrest)
 
 
-![Q3.3downstream](/assets/sites/Q3.3downstream.jpg)
-View downstream from the study site / Visita rio abajo del lugar del estudio (March 2023) (John Forrest)
-
-
 ![Q3.3upstream](/assets/sites/Q3.3upstream.jpg)
-View upstream from the study site / Vista rio arriba desde el lugar del estudio (March 2023) (John Forrest)
+View downstream from the study site / Vista rio abajo desde el lugar del estudio (March 2023) (John Forrest)
+
+
+![Q3.3downstream](/assets/sites/Q3.3downstream.jpg)
+View upstream from the study site / Visita rio arriba del lugar del estudio (March 2023) (John Forrest)
 
 
 ### Site description
