--- a/_docs/site-network/Q3_1.md
+++ b/_docs/site-network/Q3_1.md
@@ -1,10 +1,11 @@
 ---
-title: Q3.1 - Lower Huamanguilla-Iguian - Boca Huamanguilla-Iguian
+title: Q3.1 - Lower Huamanguilla-Iguian - Cangari
 permalink: /docs/Q3_1/
 ---
 
 
-### Site Q3.1 - Lower Huamanguilla-Iguian - Boca Huamanguilla-Iguian
+### Site Q3.1 - Lower Huamanguilla-Iguian - Cangari
+
 
 ![Q3.1](/assets/sites/Q3.1.jpg)
 Aerial view of study site / Vista aérea del lugar del estudio (March 2023) (John Forrest)
@@ -25,3 +26,4 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 ### Site description
 
 ### Data analysis
+
