--- a/_docs/site-network/RC01.md
+++ b/_docs/site-network/RC01.md
@@ -1,10 +1,10 @@
 ---
-title: RC01 - study site
+title: RC01 - Lower Cachi - Puente Allccomachay
 permalink: /docs/RC01/
 ---
 
 
-### Site: RC01 - Puente Acchomachay
+### Site: RC01 - Lower Cachi - Puente Allccoomachay
 
 
 ![RC01](/assets/sites/RC01.jpg)
@@ -21,6 +21,7 @@ Site RC01 - View upstream.  (March 2023) (John Forrest)
 
 ![RC01 View downstream](/assets/sites/RC01downstream.jpg)
 Site RC01 - View downstream.  (March 2023) (John Forrest)
+
 
 
 ### Water Quality data
