--- a/_docs/site-network/RC02.md
+++ b/_docs/site-network/RC02.md
@@ -1,25 +1,26 @@
 ---
-title: RC02 - Cangari
+title: RC02 - Upper Cachi - Cangari
 permalink: /docs/RC01/
 ---
 
 
-### RC02 - Rio Cachi - Cangari
+### RC02 - Upper Cachi - Cangari
+
 
 ![RC02](/assets/sites/RC02.jpg)
-Site RC01 - Study site location: below Puente Allccomachay
+Site RC02 - Study site location: Puente Cangari
 
 
 ![RC02 - the study site](/assets/sites/RC02site.jpg)
-Site RC01 - the study site.  (March 2023) (John Forrest)
+Site RC02 - the study site. (March 2023) (John Forrest)
 
 
 ![RC02 View upstream](/assets/sites/RC02upstream.jpg)
-Site RC01 - View upstream.  (March 2023) (John Forrest)
+Site RC02 - View upstream. (March 2023) (John Forrest)
 
 
 ![RC02 View downstream](/assets/sites/RC02downstream.jpg)
-Site RC01 - View downstream.  (March 2023) (John Forrest)
+Site RC02 - View downstream. (March 2023) (John Forrest)
 
 
 
