--- a/_docs/site-network/Q2_4.md
+++ b/_docs/site-network/Q2_4.md
@@ -10,7 +10,7 @@ permalink: /docs/Q2_4/
 Aerial view of study site / Vista aérea del lugar del estudio (March 2023) (John Forrest)
 
 
-![Q2.4site](/assets/sites/Q2.4site.jpg)
+![Q2.4site](/assets/sites/Q2.4site.JPG)
 The study site / El lugar del estudio (March 2023) (John Forrest)
 
 
