--- a/_docs/site-network/Q1_1.md
+++ b/_docs/site-network/Q1_1.md
@@ -26,3 +26,28 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 
 ### Data analysis
 
+
+|     Site / Sitio: Q1.1                                   |     March 2023                        |
+|----------------------------------------------------------|---------------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano           |
+|     Date / Fecha:                                        |     15.3.23                           |
+|     Time / Hora:                                         |     7.45                              |
+|     Width / Ancho (m)                                    |     2.70                              |
+|     Depth / Profundidad (Av.) (m)                        |     0.08                              |
+|     CSA / Area traversal (Av.) (m²)                      |     0.22                              |
+|     Velocity / Velocidad  (Av.) (m/s)                    |     0.20                              |
+|     Discharge / Caudal (Av.) (m³/s)                      |     0.044                             |
+|     Riverbed sediment / Sedimentos                       |     Mainly pebbles / Mas piedritas    |
+|     Temperature (Atmospheric) (°C)                       |     15.6                              |
+|     Temperature (Water / Agua) (°C)                      |     16.6                              |
+|     Atmospheric pressure / presión (mbar)                |     805.7                             |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |                                       |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |                                       |
+|     pH                                                   |     8.38                              |
+|     Conductivity / Conductividad (µS/cm)                 |     913                               |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     456                               |
+|     ORP (mV)                                             |     224.5                             |
+|     Turbidity / Turbidez                                 |     Clear / Transparente              |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     340 (1.6N)                        |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     308                               |
+
