--- a/_docs/site-network/Q1_2.md
+++ b/_docs/site-network/Q1_2.md
@@ -26,3 +26,27 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 
 ### Data analysis
 
+|     Site / Sitio: Q1.2                                   |     March 2023                                      |
+|----------------------------------------------------------|-----------------------------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano                         |
+|     Date / Fecha:                                        |     16.3.23                                         |
+|     Time / Hora:                                         |     9.15                                            |
+|     Width / Ancho (m)                                    |     4.70                                            |
+|     Depth / Profundidad (Av.) (m)                        |     0.22                                            |
+|     CSA / Area traversal (Av.) (m²)                      |     1.03                                            |
+|     Velocity / Velocidad  (Av.) (m/s)                    |     0.45                                            |
+|     Discharge / Caudal (Av.) (m³/s)                      |     0.465                                           |
+|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Principalmente rocas          |
+|     Temperature (Atmospheric) (°C)                       |     17.9                                            |
+|     Temperature (Water / Agua) (°C)                      |     11.84                                           |
+|     Atmospheric pressure / presión (mbar)                |     767.4                                           |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |                                                     |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |                                                     |
+|     pH                                                   |     8.68                                            |
+|     Conductivity / Conductividad (µS/cm)                 |     220                                             |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     110                                             |
+|     ORP (mV)                                             |     228.1                                           |
+|     Turbidity / Turbidez                                 |     Slightly green/brown Un poco   verde/marron     |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     123 (1.6N)                                      |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     116                                             |
+
