--- a/_docs/site-network/Q1_3.md
+++ b/_docs/site-network/Q1_3.md
@@ -26,3 +26,27 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 
 ### Data analysis
 
+|     Site / Sitio: Q1.3                                   |     March 2023                                |
+|----------------------------------------------------------|-----------------------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano                   |
+|     Date / Fecha:                                        |     21.3.23                                   |
+|     Time / Hora:                                         |     9.30                                      |
+|     Width / Ancho (m)                                    |     5.74                                      |
+|     Depth / Profundidad (Av.) (m)                        |     0.19                                      |
+|     CSA / Area traversal (Av.) (m²)                      |     1.09                                      |
+|     Velocity / Velocidad  (Av.) (m/s)                    |     0.88                                      |
+|     Discharge / Caudal (Av.) (m³/s)                      |     0.960                                     |
+|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Principalmente rocas    |
+|     Temperature (Atmospheric) (°C)                       |     15.9                                      |
+|     Temperature (Water / Agua) (°C)                      |     11.18                                     |
+|     Atmospheric pressure / presión (mbar)                |     684.3                                     |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     6.29                                      |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |     97.4                                      |
+|     pH                                                   |                        8.57                   |
+|     Conductivity / Conductividad (µS/cm)                 |     269                                       |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     134                                       |
+|     ORP (mV)                                             |     265.6                                     |
+|     Turbidity / Turbidez                                 |     Clear / Transparente                      |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     158 (1.6N)                                |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     150                                       |
+
