--- a/_docs/site-network/Q2_1.md
+++ b/_docs/site-network/Q2_1.md
@@ -25,3 +25,27 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 ### Site description
 
 ### Data analysis
+
+|     Site / Sitio: Q2.1                                   |     March 2023                        |
+|----------------------------------------------------------|---------------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano           |
+|     Date / Fecha:                                        |     17.3.23                           |
+|     Time / Hora:                                         |     7.30                              |
+|     Width / Ancho (m)                                    |     3.09                              |
+|     Depth / Profundidad (Av.) (m)                        |     0.16                              |
+|     CSA / Area traversal (Av.) (m²)                      |     0.49                              |
+|     Velocity / Velocidad  (Av.) (m/s)                    |     0.42                              |
+|     Discharge / Caudal (Av.) (m³/s)                      |     0.208                             |
+|     Riverbed sediment / Sedimentos                       |     Mainly pebbles / Mas piedritas    |
+|     Temperature (Atmospheric) (°C)                       |     20.3                              |
+|     Temperature (Water / Agua) (°C)                      |     17.92                             |
+|     Atmospheric pressure / presión (mbar)                |     804.1                             |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |                                       |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |                                       |
+|     pH                                                   |     8.38                              |
+|     Conductivity / Conductividad (µS/cm)                 |     847                               |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     424                               |
+|     ORP (mV)                                             |     223.8                             |
+|     Turbidity / Turbidez                                 |     Grey/Brown Gris/Marron            |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     320 (1.6N)                        |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     286                               |
