--- a/_docs/site-network/Q2_2.md
+++ b/_docs/site-network/Q2_2.md
@@ -25,3 +25,28 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 ### Site description
 
 ### Data analysis
+
+|     Site / Sitio: Q2.2                                   |     March 2023                                           |
+|----------------------------------------------------------|----------------------------------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano                              |
+|     Date / Fecha:                                        |     18.3.23                                              |
+|     Time / Hora:                                         |     8.30                                                 |
+|     Width / Ancho (m)                                    |     5.80                                                 |
+|     Depth / Profundidad (Av.) (m)                        |     0.23                                                 |
+|     CSA / Area traversal (Av.) (m²)                      |     1.33                                                 |
+|     Velocity / Velocidad  (Av.) (m/s)                    |     0.42                                                 |
+|     Discharge / Caudal (Av.) (m³/s)                      |     0.560                                                |
+|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Principalmente rocas               |
+|     Temperature (Atmospheric) (°C)                       |     20.3                                                 |
+|     Temperature (Water / Agua) (°C)                      |     11.09                                                |
+|     Atmospheric pressure / presión (mbar)                |     762.6                                                |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     7.41                                                 |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |     91.5                                                 |
+|     pH                                                   |     8.01                                                 |
+|     Conductivity / Conductividad (µS/cm)                 |     53                                                   |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     26                                                   |
+|     ORP (mV)                                             |     212.2                                                |
+|     Turbidity / Turbidez                                 |     Clear, slightly grey / Transparente,   poco gris     |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     47 (1.6N)                                            |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     48                                                   |
+
