--- a/_docs/site-network/Q2_3.md
+++ b/_docs/site-network/Q2_3.md
@@ -25,3 +25,27 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 ### Site description
 
 ### Data analysis
+
+|     Site / Sitio: Q2.3                                   |     March 2023                                           |
+|----------------------------------------------------------|----------------------------------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano                              |
+|     Date / Fecha:                                        |     19.3.23                                              |
+|     Time / Hora:                                         |     8.30                                                 |
+|     Width / Ancho (m)                                    |     6.00                                                 |
+|     Depth / Profundidad (Av.) (m)                        |     0.08                                                 |
+|     CSA / Area traversal (Av.) (m²)                      |     0.50                                                 |
+|     Velocity / Velocidad  (Av.) (m/s)                    |     1.17                                                 |
+|     Discharge / Caudal (Av.) (m³/s)                      |     0.589                                                |
+|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Principalmente rocas               |
+|     Temperature (Atmospheric) (°C)                       |     9.0                                                  |
+|     Temperature (Water / Agua) (°C)                      |     10.83                                                |
+|     Atmospheric pressure / presión (mbar)                |     680.3                                                |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     5.78                                                 |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |     89.9                                                 |
+|     pH                                                   |     7.99                                                 |
+|     Conductivity / Conductividad (µS/cm)                 |     64                                                   |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     32                                                   |
+|     ORP (mV)                                             |     208.9                                                |
+|     Turbidity / Turbidez                                 |     Clear: slightly green Transparente:   poco verde     |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     32 (1.6N)                                            |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     20                                                   |
