--- a/_docs/site-network/Q2_4.md
+++ b/_docs/site-network/Q2_4.md
@@ -18,3 +18,27 @@ The study site / El lugar del estudio (March 2023) (John Forrest)
 
 
 ### Data analysis
+
+|     Site / Sitio: Q2.4                                   |     March 2023                                          |
+|----------------------------------------------------------|---------------------------------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano                             |
+|     Date / Fecha:                                        |     19.3.23                                             |
+|     Time / Hora:                                         |     10.45                                               |
+|     Width / Ancho (m)                                    |     2.70                                                |
+|     Depth / Profundidad (Av.) (m)                        |     0.19                                                |
+|     CSA / Area traversal (Av.) (m²)                      |     0.51                                                |
+|     Velocity / Velocidad  (Av.) (m/s)                    |     0.86                                                |
+|     Discharge / Caudal (Av.) (m³/s)                      |     0.441                                               |
+|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Principalmente rocas              |
+|     Temperature (Atmospheric) (°C)                       |     18.1                                                |
+|     Temperature (Water / Agua) (°C)                      |     11.14                                               |
+|     Atmospheric pressure / presión (mbar)                |     676.1                                               |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     4.45                                                |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |     72.9                                                |
+|     pH                                                   |     7.48                                                |
+|     Conductivity / Conductividad (µS/cm)                 |     48                                                  |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     24                                                  |
+|     ORP (mV)                                             |     270.8                                               |
+|     Turbidity / Turbidez                                 |     Clear: slightly black Transparente:   poco negro    |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     39 (1.6N)                                           |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     20                                                  |
