--- a/_docs/site-network/Q3_1.md
+++ b/_docs/site-network/Q3_1.md
@@ -28,3 +28,27 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 
 ### Data analysis
 
+|     Site / Sitio: Q3.1                                   |     March 2023                                           |
+|----------------------------------------------------------|----------------------------------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano                              |
+|     Date / Fecha:                                        |     20.3.23                                              |
+|     Time / Hora:                                         |     8.30                                                 |
+|     Width / Ancho (m)                                    |     10.20                                                |
+|     Depth / Profundidad (Av.) (m)                        |     0.22                                                 |
+|     CSA / Area traversal (Av.) (m²)                      |     2.24                                                 |
+|     Velocity / Velocidad  (Av.) (m/s)                    |     0.78                                                 |
+|     Discharge / Caudal (Av.) (m³/s)                      |     1.741                                                |
+|     Riverbed sediment / Sedimentos                       |     Mainly pebbles / Principalmente piedritas            |
+|     Temperature (Atmospheric) (°C)                       |     21.6                                                 |
+|     Temperature (Water / Agua) (°C)                      |     14.77                                                |
+|     Atmospheric pressure / presión (mbar)                |     809.2                                                |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     6.88                                                 |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |     82.2                                                 |
+|     pH                                                   |     7.98                                                 |
+|     Conductivity / Conductividad (µS/cm)                 |     171                                                  |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     86                                                   |
+|     ORP (mV)                                             |     248.8                                                |
+|     Turbidity / Turbidez                                 |     Clear: slightly green Transparente:   poco verde     |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     81 (1.6N)                                            |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     80                                                   |
+
