--- a/_docs/site-network/Q3_2.md
+++ b/_docs/site-network/Q3_2.md
@@ -26,3 +26,27 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 
 
 ### Data analysis
+
+|     Site / Sitio: Q3.2                                   |     March 2023                                     |
+|----------------------------------------------------------|----------------------------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano                        |
+|     Date / Fecha:                                        |     22.3.23                                        |
+|     Time / Hora:                                         |     9.00                                           |
+|     Width / Ancho (m)                                    |     5.60                                           |
+|     Depth / Profundidad (Av.) (m)                        |     0.73                                           |
+|     CSA / Area traversal (Av.) (m²)                      |     4.09                                           |
+|     Velocity / Velocidad  (Av.) (m/s)                    |     0.68                                           |
+|     Discharge / Caudal (Av.) (m³/s)                      |     2.760                                          |
+|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Principalmente rocas         |
+|     Temperature (Atmospheric) (°C)                       |     17.0                                           |
+|     Temperature (Water / Agua) (°C)                      |     11.97                                          |
+|     Atmospheric pressure / presión (mbar)                |     762.0                                          |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     7.70                                           |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |     96.7                                           |
+|     pH                                                   |     8.07                                           |
+|     Conductivity / Conductividad (µS/cm)                 |     38                                             |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     19                                             |
+|     ORP (mV)                                             |     251.3                                          |
+|     Turbidity / Turbidez                                 |     Turbid: slightly grey Turbidez: poco   gris    |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     41 (1.6N)                                      |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     40                                             |
