--- a/_docs/site-network/Q3_3.md
+++ b/_docs/site-network/Q3_3.md
@@ -29,3 +29,27 @@ View upstream from the study site / Visita rio arriba del lugar del estudio (Mar
 ### Site description
 
 ### Data analysis
+
+|     Site / Sitio: Q3.3                                   |     March 2023                                   |
+|----------------------------------------------------------|--------------------------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano                      |
+|     Date / Fecha:                                        |     23.3.23                                      |
+|     Time / Hora:                                         |     10.30                                        |
+|     Width / Ancho (m)                                    |     0.78                                         |
+|     Depth / Profundidad (Av.) (m)                        |     0.25                                         |
+|     CSA / Area traversal (Av.) (m²)                      |     0.20                                         |
+|     Velocity / Velocidad  (Av.) (m/s)                    |     0.01                                         |
+|     Discharge / Caudal (Av.) (m³/s)                      |     0.040                                        |
+|     Riverbed sediment / Sedimentos                       |     Mainly pebbles / Principalmente piedritas    |
+|     Temperature (Atmospheric) (°C)                       |     9.9                                          |
+|     Temperature (Water / Agua) (°C)                      |     12.31                                        |
+|     Atmospheric pressure / presión (mbar)                |     674.7                                        |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     6.82                                         |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |     107.5                                        |
+|     pH                                                   |     7.46                                         |
+|     Conductivity / Conductividad (µS/cm)                 |     38                                           |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     19                                           |
+|     ORP (mV)                                             |     177.5                                        |
+|     Turbidity / Turbidez                                 |     Clear  /    Transparente                     |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     28 (1.6N)                                    |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     25                                           |
