--- a/_docs/site-network/RC02.md
+++ b/_docs/site-network/RC02.md
@@ -23,9 +23,33 @@ Site RC02 - View upstream. (March 2023) (John Forrest)
 Site RC02 - View downstream. (March 2023) (John Forrest)
 
 
+### Site description
+
 
 ### Data analysis
 
+|     Site / Sitio: RC02                                   |     March 2023                                |
+|----------------------------------------------------------|-----------------------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano                   |
+|     Date / Fecha:                                        |     20.3.23                                   |
+|     Time / Hora:                                         |     11.30                                     |
+|     Width / Ancho (m)                                    |     29.50                                     |
+|     Depth / Profundidad (Av.) (m)                        |     0.92                                      |
+|     CSA / Area traversal (Av.) (m²)                      |     27.25                                     |
+|     Velocity / Velocidad  (Av.) (m/s)                    |     1.24                                      |
+|     Discharge / Caudal (Av.) (m³/s)                      |     33.845                                    |
+|     Riverbed sediment / Sedimentos                       |     Boulders & Cobbles / Rocas y Guijarros    |
+|     Temperature (Atmospheric) (°C)                       |     27.2                                      |
+|     Temperature (Water / Agua) (°C)                      |     17.06                                     |
+|     Atmospheric pressure / presión (mbar)                |     804.2                                     |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     7.89                                      |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |     100.4                                     |
+|     pH                                                   |     8.05                                      |
+|     Conductivity / Conductividad (µS/cm)                 |     158                                       |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     79                                        |
+|     ORP (mV)                                             |     230.5                                     |
+|     Turbidity / Turbidez                                 |     Turbid: light brown / marron ligero       |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     56 (1.6N)                                 |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     38                                        |
 
-### Site description
 
