--- a/_docs/site-network/RC01.md
+++ b/_docs/site-network/RC01.md
@@ -6,6 +6,9 @@ permalink: /docs/RC01/
 
 ### Site: RC01 - Lower Cachi - Puente Allccoomachay
 
+GPS: S12°843874, W74°328924. 
+Elevation: 2158m asl.
+
 
 ![RC01](/assets/sites/RC01.jpg)
 Site RC01 - Study site location: below Puente Allccomachay
@@ -29,7 +32,11 @@ Site RC01 - View downstream.  (March 2023) (John Forrest)
 
 ### Data Analysis
 
+Analytical comments with respect to the data will be posted once the site has been visited at least twice.
+
 ### Water Quality data
+
+The following river and water quality data was collected from this site:
 
 |     Site / Sitio: RC01                                 |     March / marzo 2023                          |
 |--------------------------------------------------------|-------------------------------------------------|
