--- a/_docs/site-network/RC02.md
+++ b/_docs/site-network/RC02.md
@@ -6,6 +6,8 @@ permalink: /docs/RC02/
 
 ### RC02 - Upper Cachi - Cangari
 
+GPS:
+Elevation: 2335m asl.
 
 ![RC02](/assets/sites/RC02.jpg)
 Site RC02 - Study site location: Puente Cangari
@@ -26,9 +28,16 @@ Site RC02 - View downstream. (March 2023) (John Forrest)
 ### Site description
 
 
+
 ### Data analysis
 
-|     Site / Sitio: RC02                                   |     March 2023                                |
+Analytical comments with respect to the data will be posted once a site has been visited at least twice.
+
+### Water quality data
+
+The following river and water quality data was collected from this site:
+
+|     Site / Sitio: RC02                                   |     March / marzo 2023                        |
 |----------------------------------------------------------|-----------------------------------------------|
 |     Season / Temporada:                                  |     Austral Summer / Verano                   |
 |     Date / Fecha:                                        |     20.3.23                                   |
