--- a/_docs/site-network/RC02.md
+++ b/_docs/site-network/RC02.md
@@ -6,8 +6,9 @@ permalink: /docs/RC02/
 
 ### RC02 - Upper Cachi - Cangari
 
-GPS:
+GPS: S12°99964, W74°285016. 
 Elevation: 2335m asl.
+
 
 ![RC02](/assets/sites/RC02.jpg)
 Site RC02 - Study site location: Puente Cangari
