--- a/_docs/site-network/Q1_1.md
+++ b/_docs/site-network/Q1_1.md
@@ -6,6 +6,10 @@ permalink: /docs/Q1_1/
 
 ### Site Q1.1: Lower Opanccay - Boca Opanccay
 
+GPS:
+Elevation: 2266m asl.
+
+
 ![Q1.1](/assets/sites/Q1.1.jpg)
 Aerial view of study site / Vista aérea del lugar del estudio (March 2023) (John Forrest)
 
@@ -24,8 +28,15 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 
 ### Site description
 
+
+
 ### Data analysis
 
+Analytical comments with respect to the data will be posted once a site has been visited at least twice.
+
+### Water quality data
+
+The following river and water quality data was collected from this site:
 
 |     Site / Sitio: Q1.1                                   |     March 2023                        |
 |----------------------------------------------------------|---------------------------------------|
