--- a/_docs/site-network/Q1_1.md
+++ b/_docs/site-network/Q1_1.md
@@ -6,7 +6,7 @@ permalink: /docs/Q1_1/
 
 ### Site Q1.1: Lower Opanccay - Boca Opanccay
 
-GPS:
+GPS: S12°837746, W74°29603
 Elevation: 2266m asl.
 
 
@@ -38,7 +38,7 @@ Analytical comments with respect to the data will be posted once a site has been
 
 The following river and water quality data was collected from this site:
 
-|     Site / Sitio: Q1.1                                   |     March 2023                        |
+|     Site / Sitio: Q1.1                                   |     March / marzo 2023                        |
 |----------------------------------------------------------|---------------------------------------|
 |     Season / Temporada:                                  |     Austral Summer / Verano           |
 |     Date / Fecha:                                        |     15.3.23                           |
