--- a/_docs/site-network/Q1_3.md
+++ b/_docs/site-network/Q1_3.md
@@ -6,6 +6,10 @@ permalink: /docs/Q1_3/
 
 ### Site Q1.3: Upper Opanccay
 
+GPS: 
+Elevation:  3965m asl.
+
+
 ![Q1.3](/assets/sites/Q1.3.jpg)
 Aerial view of study site / Vista aérea del lugar del estudio (March 2023) (John Forrest)
 
@@ -24,9 +28,17 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 
 ### Site description
 
+
+
 ### Data analysis
 
-|     Site / Sitio: Q1.3                                   |     March 2023                                |
+Analytical comments with respect to the data will be posted once a site has been visited at least twice.
+
+### Water quality data
+
+The following river and water quality data was collected from this site:
+
+|     Site / Sitio: Q1.3                                   |     March / marzo 2023                                |
 |----------------------------------------------------------|-----------------------------------------------|
 |     Season / Temporada:                                  |     Austral Summer / Verano                   |
 |     Date / Fecha:                                        |     21.3.23                                   |
