--- a/_docs/site-network/Q1_3.md
+++ b/_docs/site-network/Q1_3.md
@@ -6,8 +6,8 @@ permalink: /docs/Q1_3/
 
 ### Site Q1.3: Upper Opanccay
 
-GPS: 
-Elevation:  3965m asl.
+GPS: S12°846634, W74°205759. 
+Elevation: 3965m asl.
 
 
 ![Q1.3](/assets/sites/Q1.3.jpg)
