--- a/_docs/site-network/Q2_1.md
+++ b/_docs/site-network/Q2_1.md
@@ -6,6 +6,10 @@ permalink: /docs/Q2_1/
 
 ### Site Q2.1: Lower Huanta - Boca Huanta
 
+GPS: S12°906633, W74°250332. 
+Elevation:  m asl.
+
+
 ![Q2.1](/assets/sites/Q2.1.jpg)
 Aerial view of study site / Vista aérea del lugar del estudio (March 2023) (John Forrest)
 
@@ -24,9 +28,17 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 
 ### Site description
 
+
+
 ### Data analysis
 
-|     Site / Sitio: Q2.1                                   |     March 2023                        |
+Analytical comments with respect to the data will be posted once a site has been visited at least twice.
+
+### Water quality data
+
+The following river and water quality data was collected from this site:
+
+|     Site / Sitio: Q2.1                                   |     March / marzo 2023                        |
 |----------------------------------------------------------|---------------------------------------|
 |     Season / Temporada:                                  |     Austral Summer / Verano           |
 |     Date / Fecha:                                        |     17.3.23                           |
