--- a/_docs/site-network/Q2_3.md
+++ b/_docs/site-network/Q2_3.md
@@ -1,10 +1,13 @@
 ---
-title: Q2.3 - Lower Rasuhuillca
+title: Q2.3 - Lower Razuhuillca
 permalink: /docs/Q2_3/
 ---
 
 
-### Site Q2.3 - Lower Rasuhuillca
+### Site Q2.3 - Lower Razuhuillca
+
+
+
 
 ![Q2.3](/assets/sites/Q2.3.jpg)
 Aerial view of study site / Vista aérea del lugar del estudio (March 2023) (John Forrest)
@@ -24,9 +27,17 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 
 ### Site description
 
+
+
 ### Data analysis
 
-|     Site / Sitio: Q2.3                                   |     March 2023                                           |
+Analytical comments with respect to the data will be posted once a site has been visited at least twice.
+
+### Water quality data
+
+The following river and water quality data was collected from this site:
+
+|     Site / Sitio: Q2.3                                   |     March / marzo 2023                                           |
 |----------------------------------------------------------|----------------------------------------------------------|
 |     Season / Temporada:                                  |     Austral Summer / Verano                              |
 |     Date / Fecha:                                        |     19.3.23                                              |
